Added implementation and README

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,10 @@ dkms.conf
 
 # debug information files
 *.dwo
+
+# ========================
+# Project-specific ignores
+# ========================
+
+# CMake build directories
+examples/build/
